# vcf2parquet

./: .gitignore  Cargo.toml  README.md  data.metadata.json  example_output.metadata.json  example_output.parquet  main.py  pyproject.toml  sample.vcf.gz.metadata.json  sample.vcf.metadata.json  sample.vcf.parquet  vcf2parquet.py
example/: example_output.parquet  example_output_tesi.parquet  example_output_test.parquet
example_output/: example_output.metadata.json
src/: args.rs  create_parquet.rs  delay.rs  error.rs  lib.rs  main.rs  metadata.rs  parquet.rs  parquet_writer.rs  read_vcf.rs  vcf.rs
