[package]
name = "vcf2parquet"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to convert VCF files to Parquet format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/vcf2parquet"
readme = "README.md"
keywords = ["bioinformatics", "vcf", "parquet", "genomics"]
categories = ["science", "data-structures"]

[features]
default = ["async"]
async = ["tokio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
flate2 = { version = "1.0", features = ["zlib"] }
polars = { version = "0.39", features = ["lazy", "parquet", "csv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "time"], optional = true }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "vcf2parquet"
path = "src/lib.rs"
